修改package.json减少依赖

--- a/html/autoComplete.html
+++ b/html/autoComplete.html
@@ -5,8 +5,11 @@
 	<title></title>
 </head>
 <body>
-<auto-complete></auto-complete>
+<auto-complete>
+	<a href="javascript:void(0);" slot="button">确定</a>
+</auto-complete>
 </body>
+<script src="../libraries/vue/vue.min.js"></script>
 <script src="../build/autoComplete/index.js"></script>
 <script>
 
