--- a/html/test/index.html
+++ b/html/test/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <search-auto-complete @input-change="inputChange">
-    <a href="javascript:void(0);" slot="button" @hover="hoverBtn" @click="clickBtn">确定</a>
+    <a href="javascript:void(0);" class="confirm" slot="button" @hover="hoverBtn" @click="clickBtn">确定</a>
 </search-auto-complete>
 </body>
 <script src="../../libraries/dom/dom.js"></script>
